
********************************************************************************

  Project : SHTRIH-M JavaPOS fiscal printer driver
  Company : SHTRIH-M www.shtrih-m.ru (095) 787-6090

********************************************************************************

  January, 11 2016, 16:30
  deviceServiceVersion = 1013339
	
  [+] Added nonfiscal document header printing
  
********************************************************************************

  January, 9 2016, 20:30
  deviceServiceVersion = 1013338
	
  [+] Added exception when tags writed when receipt is closed
  
********************************************************************************

  January, 9 2016, 20:15
  deviceServiceVersion = 1013337
	
  [+] Added document header printing in Nonfiscal document
  
********************************************************************************

  December, 26 2016, 14:23
  deviceServiceVersion = 1013331
	
  [-] Added parameter readDiscountMode 
  
********************************************************************************

  December, 22 2016, 23:58
  deviceServiceVersion = 1013329
	
  [-] Fixed error with "Invalid answer code" error handling
  
********************************************************************************

  December, 20 2016, 20:33
  deviceServiceVersion = 1013328
	
  [-] Fixed error with serial port
  
********************************************************************************

  December, 14 2016, 22:20
  deviceServiceVersion = 1013327
	
  [-] Fixed error with receipt subtotal discount
  
********************************************************************************

  December, 13 2016, 19:30
  deviceServiceVersion = 1013326
	
  [-] Fixed error with socket port reconnect
  
********************************************************************************

  December, 9 2016, 18:50
  deviceServiceVersion = 1013325
	
  [-] Fixed error with TLV string tag encoding
  