@@ -26,11 +26,8 @@
     </editor-bookmarks>
     <open-files xmlns="http://www.netbeans.org/ns/projectui-open-files/2">
         <group>
-            <file>file:/C:/projects/JavaPOS1/Source/FiscalPrinterService/src/com/shtrih/jpos/fiscalprinter/directIO/DirectIOHandler2.java</file>
-            <file>file:/C:/projects/JavaPOS1/Source/FiscalPrinterService/src/com/shtrih/jpos/fiscalprinter/SmFptrConst.java</file>
-            <file>file:/C:/projects/JavaPOS1/Source/FiscalPrinterService/src/com/shtrih/jpos/fiscalprinter/directIO/DirectIOHandler.java</file>
-            <file>file:/C:/projects/JavaPOS1/Source/FiscalPrinterService/src/com/shtrih/jpos/fiscalprinter/directIO/DIOReadShortStatus.java</file>
-            <file>file:/C:/projects/JavaPOS1/Source/FiscalPrinterService/src/com/shtrih/jpos/fiscalprinter/FiscalPrinterImpl.java</file>
+            <file>file:/C:/projects/JavaPOS1/Source/Core/src/com/shtrih/fiscalprinter/command/LongPrinterStatus.java</file>
+            <file>file:/C:/projects/JavaPOS1/Source/Core/src/com/shtrih/jpos/fiscalprinter/FiscalPrinterService.java</file>
         </group>
     </open-files>
 </project-private>
