@@ -1,5 +1,5 @@
 package com.shtrih.util;
 
 public class ServiceVersion {
-    public static final String VERSION = "338-6-g4181740";
+    public static final String VERSION = "339";
 }
