@@ -6,6 +6,13 @@
 
 ********************************************************************************
 
+  January, 11 2016, 20:30
+  deviceServiceVersion = 1013340
+	
+  [-] Fixed error with Socket port sharing
+  
+********************************************************************************
+
   January, 11 2016, 16:30
   deviceServiceVersion = 1013339
 	
